--- a/harvester/kustomize/base/configmap.yml
+++ b/harvester/kustomize/base/configmap.yml
@@ -9,3 +9,4 @@ data:
     spring.data.cassandra.port=9042
     spring.data.cassandra.contact-points=192.168.68.124
     spring.data.cassandra.local-datacenter=datacenter1
+    is_local=false
