--- a/harvester/pom.xml
+++ b/harvester/pom.xml
@@ -67,7 +67,6 @@
             <artifactId>bittrex_client</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
     </dependencies>
     <!--	<dependencyManagement>-->
     <!--		<dependencies>-->
@@ -109,10 +108,10 @@
                 <version>3.1.4</version>
                 <configuration>
                     <from>
-                        <image>openjdk:11-jdk-slim</image>
+                        <image>openjdk:16-jdk-slim</image>
                     </from>
                     <to>
-                        <image>docker.io/rbuhrmann/cc-harvester</image>
+                        <image>docker.io/rbuhrmann/cc-harvester:7</image>
                     </to>
                 </configuration>
             </plugin>
