--- a/harvester/src/main/resources/application.properties
+++ b/harvester/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.data.cassandra.keyspace-name=sample
 spring.data.cassandra.port=9042
 spring.data.cassandra.contact-points=192.168.68.124
 spring.data.cassandra.local-datacenter=datacenter1
+is_local=true
