--- a/harvester/kustomize/base/configmap.yml
+++ b/harvester/kustomize/base/configmap.yml
@@ -10,3 +10,4 @@ data:
     spring.data.cassandra.contact-points=192.168.68.124
     spring.data.cassandra.local-datacenter=datacenter1
     is_local=false
+    logging.level.za.co.s2c=DEBUG
