--- a/ai_bot/pom.xml
+++ b/ai_bot/pom.xml
@@ -122,7 +122,7 @@
                         <image>openjdk:11-jdk-slim</image>
                     </from>
                     <to>
-                        <image>docker.io/rbuhrmann/cc-candler</image>
+                        <image>docker.io/rbuhrmann/cc-candler:1</image>
                     </to>
                 </configuration>
             </plugin>
