--- a/ai_bot/kustomize/base/configmap.yml
+++ b/ai_bot/kustomize/base/configmap.yml
@@ -9,6 +9,7 @@ data:
     spring.data.cassandra.port=9042
     spring.data.cassandra.contact-points=192.168.68.124
     spring.data.cassandra.local-datacenter=datacenter1
+    spring.main.allow-circular-references=true
     is_local=false
     logging.level.za.co.s2c=TRACE
     logging.level.root=DEBUG
