--- a/ai_bot/kustomize/base/configmap.yml
+++ b/ai_bot/kustomize/base/configmap.yml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: candler-cm
+  name: candler-cm2
 data:
   application.properties: |
     spring.data.cassandra.keyspace-name=sample
