--- a/ai_bot/pom.xml
+++ b/ai_bot/pom.xml
@@ -95,6 +95,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-cassandra</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.hazelcast</groupId>
+            <artifactId>hazelcast-kubernetes</artifactId>
+        </dependency>
 
     </dependencies>
 
@@ -122,7 +126,7 @@
                         <image>openjdk:11-jdk-slim</image>
                     </from>
                     <to>
-                        <image>docker.io/rbuhrmann/cc-candler:1</image>
+                        <image>docker.io/rbuhrmann/cc-candler:2</image>
                     </to>
                 </configuration>
             </plugin>
