Configuration of spinnaker deployment for harvester and candler

--- a/ai_bot/kustomize/base/configmap.yml
+++ b/ai_bot/kustomize/base/configmap.yml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: candler-cm2
+  name: candler-cm
 data:
   application.properties: |
     spring.data.cassandra.keyspace-name=sample
