--- a/ai_bot/kustomize/alternate/configmap.yml
+++ b/ai_bot/kustomize/alternate/configmap.yml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: cryptobot-cm1
+  name: candler-cm
 data:
   application.properties: |
     spring.data.cassandra.contact-points=192.168.68.124
