Configuration of spinnaker deployment for harvester and candler

--- a/ai_bot/src/main/resources/application.properties
+++ b/ai_bot/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.main.allow-bean-definition-overriding=true
 # cqlsh 192.168.68.115
 # scp janr@192.168.68.115:/home/janr/candles.csv .
 # COPY sample.candles TO '/home/janr/candles.csv' WITH HEADER = TRUE;
-# https://stackoverflow.com/questions/33512131/adding-nodes-to-cassandra-cluster, 1) using other as seed for each, e.g. point a to b and b to a
-# https://community.datastax.com/questions/6019/how-do-i-configure-cassandra-to-use-public-ip-addr.html 2) set both listen and rpc address
+# https://stackoverflow.com/questions/33512131/adding-nodes-to-cassandra-cluster, 1) use ip address of seed node for seed ip, but use seed node's ip for other nodes' seed
+# https://community.datastax.com/questions/6019/how-do-i-configure-cassandra-to-use-public-ip-addr.html 2) set both listen and rpc address 3) at least three nodes
 spring.data.cassandra.keyspace-name=sample
 spring.data.cassandra.port=9042
 spring.data.cassandra.contact-points=192.168.68.115
